kubernetes/dashboard/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubernetes-dashboard
  labels:
    app: omega-kubernetes-dashboard
    environment: shared
