kubernetes/dashboard/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: omega-kubernetes-dashboard
  namespace: kubernetes-dashboard
  labels:
    app: omega-kubernetes-dashboard
spec:
  ports:
  - port: 80
    targetPort: 9090
    protocol: TCP
  selector:
    app: omega-kubernetes-dashboard
  type: ClusterIP
